--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
+                        <a href="Omar Essam.pdf" class="main-btn" download target="_blank">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
