--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </p>
 
                 <div class="btn-con">
-                    <a href="Omar Essam.pdf" class="main-btn" download target="_blank">
+                    <a href="Omar Essam CV (1) (1).pdf" class="main-btn" download target="_blank">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
